2 last lines, fixe text-align

--- a/style.css
+++ b/style.css
@@ -23,3 +23,6 @@ h2{
   background-color: lime; border: 2px dotted gold; border-radius: 15px;
   color: blue;width:60%; margin: auto; margin-top: 50px; margin-bottom: 20px;
 }
+.biblio{
+  text-align: left;
+}
